--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "next": "10.2.3",
+    "next-auth": "^3.24.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@types/node": "^15.6.1",
     "@types/react": "^17.0.8",
+    "@types/next-auth": "^3.15.0",
     "sass": "^1.34.0",
     "typescript": "^4.3.2"
   }
