--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "faunadb": "^4.3.0",
     "next": "10.2.3",
     "next-auth": "^3.24.0",
     "react": "17.0.2",
@@ -16,9 +17,9 @@
     "stripe": "^8.150.0"
   },
   "devDependencies": {
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^15.6.1",
     "@types/react": "^17.0.8",
-    "@types/next-auth": "^3.15.0",
     "sass": "^1.34.0",
     "typescript": "^4.3.2"
   }
